--- a/src/main/resources/templates/components/sideBar.html
+++ b/src/main/resources/templates/components/sideBar.html
@@ -7,6 +7,9 @@
 
 
 <div class="sidebar me-lg-3 mt-1 mt-lg-5 h-40 h-lg-100 d-flex justify-content-center align-items-center rounded-4 flex-lg-column flex-row">
+  <div>
+    <i class="bi bi-list-ul iconButton" id="sideBarBurger"></i>
+  </div>
   <button id="lecturePhrase" class="iconButton">
     <i class="bi bi-play-fill icons"></i>
   </button>
