--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -17,7 +17,7 @@
 <header>
 	<nav class="navbar navbar-expand-md navbar-dark">
 		<div class="container-fluid">
-			<a href="#" th:href="@{/}"> <img alt="Picto Logo"
+			<a href="#" th:href="@{/dashboard}"> <img alt="Picto Logo"
 				src="/images/Logos/Logo PNG.png" class="logo" />
 			</a>
 			<button class="navbar-toggler" type="button"
