--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-    <title>Page Connexion Inscription</title>
+<head>
+  <title>Dashboard</title>
 </head>
 <body>
 <div th:replace="~{components/navBar}"></div>
-<h1 th:text="${message}"></h1>
-
+<h2>Bienvenue, <span th:text="${username}"></span>!</h2>
 </body>
 <div th:replace="~{components/footer :: footer}"></div>
-</html>
+</html></html>
