--- a/src/main/resources/templates/connexion.html
+++ b/src/main/resources/templates/connexion.html
@@ -14,15 +14,15 @@
                 l'application est réservée aux professionnels de santé qui en font la demande.</p><br>
             <p class="switch__description description">L'inscription vous permettra un suivi des progrès de votre patient
                 ainsi que l'intégration de nouveaux pictogrammes choisis par vos soins.</p><br>
-            <a th:href="@{/register}" class="switch__button button switch-btn a-button" type="button">
-                <p>S'inscrire</p>
+            <a th:href="@{/register}" class="switch__button button-i switch-btn a-button" type="button">
+                <p>Créer un nouveau compte</p>
             </a>
         </form>
-        <div class="droit">
+        <div class="droit padding-b">
             <p>© Tous droits réservés -
-                <span class="PBlue">P</span>icto<span class="PRouge">P</span>icto® 2021</p>
+                <span class="PBlue">P</span>icto<span class="PRouge">P</span>icto® 2023</p>
         </div>
-        <div class="footer underline ">
+        <div class="footer underline padding-b">
             <a th:href="@{/mentions}">Mentions légales
             </a>
             <p class="space">
