--- a/src/main/resources/templates/echange.html
+++ b/src/main/resources/templates/echange.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div style="display:none" id="hidden-navbar">
+    <div id="hidden-navbar">
         <div  th:replace="~{components/navBar}"></div>
     </div>
 
