maj imports et regex

--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -40,7 +40,7 @@
                     <span th:class="has-error" th:if="${#fields.hasErrors('telephone')}"
                           th:errors="*{telephone}"></span>
                 </div>
-                (*mentions obligatoires)
+                (*champ requis)
             </div>
         </div>
         <div class="switch" id="connexion switch-cnt">
