--- a/src/main/resources/templates/inscription.html
+++ b/src/main/resources/templates/inscription.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <div>
-                    <a th:href="@{/login}" class="form__link">Déjà inscrit ?</a>
+                    <a th:href="@{/}" class="form__link">Déjà inscrit ?</a>
                 </div>
                 <div>
                     <button type="submit" id="logIn" class="switch__button button switch-btn a-button">S'inscrire
