--- a/src/main/resources/templates/inscriptionSucces.html
+++ b/src/main/resources/templates/inscriptionSucces.html
@@ -16,7 +16,7 @@
             <p class="switch__description description">L'inscription vous permettra un suivi des progrès de votre
                 patient
                 ainsi que l'intégration de nouveaux pictogrammes choisis par vos soins.</p><br>
-            <a th:href="@{/login}" class="switch__button button-i switch-btn a-button" type="button">
+            <a th:href="@{/}" class="switch__button button-i switch-btn a-button" type="button">
                 <p>Se rendre sur la page de connexion</p>
             </a>
         </form>
