Confirmation Ajout Mot Ok

--- a/src/main/resources/templates/components/navBar.html
+++ b/src/main/resources/templates/components/navBar.html
@@ -43,7 +43,6 @@
 					   data-bs-toggle="dropdown"
 					   href="#"
 					   role="button"
-					   th:href="@{/gestionDesMots}"
 					   aria-expanded="false">
 						Gérer mon contenu
 					</a>
@@ -93,7 +92,7 @@
 					class="nav-link dropdown-toggle"
 					th:classappend="${module == 'gestionDesDossiers' ? 'active' : ''}"
 					data-bs-toggle="dropdown" href="#" role="button"
-					aria-expanded="false" th:href="@{/gestionDesDossiers}">Dossiers
+					aria-expanded="false">Dossiers
 						médicaux</a>
 					<ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="/consulterLesDossiers">Consulter
